Sign using proper organization-wide repository key

--- a/.github/workflows/build-packages.yaml
+++ b/.github/workflows/build-packages.yaml
@@ -27,11 +27,11 @@ jobs:
     steps:
       - uses: docker/setup-qemu-action@e81a89b1732b9c48d79cd809d8d81d79c4647a18
       - uses: actions/checkout@755da8c3cf115ac066823e79a1e1788f8940201b
+      - run: echo "${{ secrets.REPO_PRIVATE_KEY }}" > ./melange.rsa
       - uses: chainguard-dev/actions/melange-build@main
         with:
           archs: x86_64,aarch64
           config: ${{ github.workspace }}/melange.yaml
-          sign-with-temporary-key: true
       - name: Determine tag based on melange build
         run: |
           PACKAGE_VERSION=$(yq '.package.version' <melange.yaml)
