--- a/.github/workflows/build-packages.yaml
+++ b/.github/workflows/build-packages.yaml
@@ -27,11 +27,13 @@ jobs:
     steps:
       - uses: docker/setup-qemu-action@e81a89b1732b9c48d79cd809d8d81d79c4647a18
       - uses: actions/checkout@755da8c3cf115ac066823e79a1e1788f8940201b
+      - uses: chainguard-dev/actions/setup-melange@680ae468cc80b9dcaae5e8be58548a33611749fa
       - run: echo "${{ secrets.REPO_PRIVATE_KEY }}" > ./melange.rsa
-      - uses: chainguard-dev/actions/melange-build@main
+      - uses: chainguard-dev/actions/melange-build-pkg@680ae468cc80b9dcaae5e8be58548a33611749fa
         with:
           archs: x86_64,aarch64
           config: ${{ github.workspace }}/melange.yaml
+          sign-with-key: true
       - name: Determine tag based on melange build
         run: |
           PACKAGE_VERSION=$(yq '.package.version' <melange.yaml)
@@ -48,7 +50,7 @@ jobs:
           # Neccesary since GitHub releases has no folder support
           cd packages && find * -type f | sed 'h;y/\//_/;H;g;s/\n/ /g;s/^/mv -v /' | sh
       - name: Release
-        uses: ncipollo/release-action@v1
+        uses: ncipollo/release-action@a2e71bdd4e7dab70ca26a852f29600c98b33153e
         with:
           tag: ${{env.RELEASE_TAG}}
           artifacts: packages/*
